--- a/ui/scss/project/patterns/_navs.scss
+++ b/ui/scss/project/patterns/_navs.scss
@@ -228,7 +228,7 @@
 }
 
 .breadcrumb_hero {
-    margin-top: 0;
+    margin: 0 0 2rem 0;
 }
 
 .nav__active, .nav__active a {
